# wormotron

./: .gitignore  Justfile  meson.build
examples/burrow/: hello_world.brw  longloop.brw  macros.brw  tilemap.brw
examples/weave/: colorgrid.wev  hello_world.wev  longloop.wev  loopforever.wev  macros.wev  mmio_hello_world.wev  mmio_instant_putc.wev  palette_tester.wev
include/: graphics.h  rom.h  wormotron.h
src/: graphics.c  main.c  rom.c  wormotron.c
subprojects/burrow/: meson.build
subprojects/burrow/include/: burrow.h
subprojects/squirm/: meson.build
subprojects/squirm/include/: squirm.h  squirm_dbg.h
subprojects/squirm/src/: main.c  squirm.c  squirm_dbg.c
subprojects/utils/: meson.build
subprojects/utils/include/: log.h  types.h  utils.h
subprojects/utils/src/: log.c  utils.c
subprojects/weave/: README.md  meson.build
subprojects/weave/include/: lexer.h  preprocessor.h  result.h  weave.h
subprojects/weave/src/: lexer.c  main.c  preprocessor.c  weave.c
